# arduino-project-template

./: .gitignore  LICENSE  Makefile  Platform.Mk  README.md  configure.ac  platform.mk
include/: project.h
scripts/: locate_arduino_header.mk  platform.mk  programmers.mk  set-flags.mk
src/: Makefile.am  main.cpp
